handle input-validation in auth forms

--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -1,13 +1,26 @@
-<div class="container backgroundAuth">
+
+<div class="container">
 	<div class="row justify-content-center">
 		<div class="box col-md-6 col-lg-4">
-			<form (ngSubmit)="handleForgetPassword()"[formGroup]="forgetPasswordForm" class="form">
+			<form (ngSubmit)="handleForgetPassword(forgetPasswordForm)" [formGroup]="forgetPasswordForm" >
 				<h2>Forget Password</h2>
-				<app-form-input [controller]="forgetPasswordForm.controls.email" [span]="'Email'"></app-form-input>
-				<button type="submit" [disabled]="forgetPasswordForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					<span *ngIf="!isLoading">Send Email </span>
+				<span *ngIf="apiError" style="color:red">{{apiError}}</span>
+        <div class="inputBox form-group">
+					<span for="email">Email</span>
+					<input id="email" formControlName="email" type="text" required />
+					<div *ngIf="forgetPasswordForm.get('email')?.errors && forgetPasswordForm.get('email')?.touched ">
+						<span *ngIf="forgetPasswordForm.get('email')?.getError('required')" class="m-0" style="color:red">User email is mandatory</span>
+						<span *ngIf="forgetPasswordForm.get('email')?.getError('email')" class="m-0" style="color:red">Enter valid email</span>
+					</div>
+					<i></i>
+				</div>
+				<div class="form-group">
+					<button  [disabled]="forgetPasswordForm.invalid" type="submit" >
+						<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
+						<span *ngIf="!isLoading">Send Email</span>
 				  </button>
-				
+        </div>
+
 			</form>
 		</div>
 	</div>
