--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -1,14 +1,37 @@
 
-<div class="container backgroundAuth">
+<div class="container">
 	<div class="row justify-content-center">
 		<div class="box col-md-6 col-lg-4">
-			<form (ngSubmit)="handleResetPassword()"[formGroup]="resetPasswordForm" class="form">
-				<h2>Reset Password</h2>
-				<app-form-input [controller]="resetPasswordForm.controls.password" [span]="'New Password'" [inputType]="'password'"></app-form-input>
-				<app-form-input [controller]="resetPasswordForm.controls.confirmPassword" [span]="'Confirm Password'" [inputType]="'password'"></app-form-input>   
-				<button type="submit" [disabled]="resetPasswordForm.invalid" ><i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-					<span *ngIf="!isLoading">Reset Password </span>
-				  </button>
+			<form (ngSubmit)="handleResetPassword(resetPasswordForm)" [formGroup]="resetPasswordForm" >
+			
+<h2>Reset Password</h2>
+				<div class="inputBox form-group">
+					<span for="password">New Password</span>
+					<input id="password" formControlName="password" type="password" required />
+					<div *ngIf="resetPasswordForm.get('Password')?.errors && resetPasswordForm.get('password')?.touched ">
+						<span *ngIf="resetPasswordForm.get('password')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
+						<span *ngIf="resetPasswordForm.get('password')?.invalid" class="m-0" style="color:red">Please enter a valid password</span>
+					</div>
+					<i></i>
+				</div>
+                <div class="inputBox form-group">
+					<span for="confirmPassword">Confirm Password</span>
+					<input id="confirmPassword" formControlName="confirmPassword" type="password" required />
+					<div *ngIf="resetPasswordForm.get('confirmPassword')?.errors && resetPasswordForm.get('confirmPassword')?.touched ">
+						<span *ngIf="resetPasswordForm.get('confirmPassword')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
+						<span *ngIf="resetPasswordForm.get('confirmPassword')?.invalid" class="m-0" style="color:red">Please enter a valid password</span>
+                    
+						<span *ngIf="resetPasswordForm.get('confirmPassword')?.getError('match')" class="m-0" style="color:red">Password and confirm password doesn't match</span>
+					</div>
+					<i></i>
+				</div>
+				<div class="form-group">
+				<button  [disabled]="resetPasswordForm.invalid" type="submit" >
+						<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
+						<span *ngIf="!isLoading">Reset Password</span>
+				</button>				
+				</div>
+				
 			</form>
 		</div>
 	</div>
