chore: add some features:
- Add project environment
- Update profile and footer UI
- Remove unused shared form
- Remove primeng dependancy

--- a/src/app/Components/footer/footer.component.css
+++ b/src/app/Components/footer/footer.component.css
@@ -4,6 +4,7 @@ footer{
     color: grey;
     padding-bottom: 20px;
     margin-top: 47vh;
+    background-color: #373737;
     /* padding-top: 4vh; */
     /* margin-top: 1000px; */
 }
