--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,5 @@
-<footer class="bg-body-tertiary text-center text-lg-start">
-    <div class="text-center p-3 pt-5" >
-      © 2024 Copyright:
-      <a class="text-body" href="#">Team X-Judge</a>
-    </div>
-  </footer>
+<footer class="text-white text-center text-lg-start">
+  <div class="text-center p-3">
+    © 2024 Team xJudge. All rights reserved.
+  </div>
+</footer>
