--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -11,7 +11,10 @@
 					<div *ngIf="resetPasswordForm.get('Password')?.errors && resetPasswordForm.get('password')?.touched ">
 						<span *ngIf="resetPasswordForm.get('password')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
 						<span *ngIf="resetPasswordForm.get('password')?.invalid" class="m-0" style="color:red">Please enter a valid password</span>
+						<span *ngIf="resetPasswordForm.get('password')?.getError('match')" class="m-0" style="color:red">Password and confirm password doesn't match</span>
 					</div>
+					<!-- <span *ngIf="validationErrors"  style="color:red; margin-top:80px;">{{validationErrors}}</span> -->
+
 					<i></i>
 				</div>
                 <div class="inputBox form-group">
@@ -19,16 +22,17 @@
 					<input id="confirmPassword" formControlName="confirmPassword" type="password" required />
 					<div *ngIf="resetPasswordForm.get('confirmPassword')?.errors && resetPasswordForm.get('confirmPassword')?.touched ">
 						<span *ngIf="resetPasswordForm.get('confirmPassword')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
-						<span *ngIf="resetPasswordForm.get('confirmPassword')?.invalid" class="m-0" style="color:red">Please enter a valid password</span>
-                    
+						<!-- <span *ngIf="resetPasswordForm.get('confirmPassword')?.invalid" class="m-0" style="color:red">Please enter a valid password</span> -->
 						<span *ngIf="resetPasswordForm.get('confirmPassword')?.getError('match')" class="m-0" style="color:red">Password and confirm password doesn't match</span>
 					</div>
+					<!-- <span *ngIf="validationErrors"  style="color:red; margin-top:80px;">{{validationErrors}}</span> -->
+
 					<i></i>
 				</div>
-				<div class="form-group">
-				<button  [disabled]="resetPasswordForm.invalid" type="submit" >
+				<div class="form-group mt-3">
+				<button  type="submit" >
 						<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
-						<span *ngIf="!isLoading">Reset Password</span>
+						<span >Reset Password</span>
 				</button>				
 				</div>
 				
