--- a/src/app/Components/change-password/change-password.component.html
+++ b/src/app/Components/change-password/change-password.component.html
@@ -11,6 +11,7 @@
 						<span *ngIf="changePasswordForm.get('oldPassword')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
 						<span *ngIf="changePasswordForm.get('oldPassword')?.getError('invalid')" class="m-0" style="color:red">User password is invalid</span>
 					</div>
+					<span *ngIf="validationErrors['oldPassword']"  style="color:red; margin-top:80px;">{{validationErrors.oldPassword}}</span>
 					<i></i>
 				</div>
                 <div class="inputBox form-group">
@@ -20,6 +21,7 @@
 						<span *ngIf="changePasswordForm.get('password')?.getError('required')" class="m-0" style="color:red">User password is mandatory</span>
 						<span *ngIf="changePasswordForm.get('password')?.getError('invalid')" class="m-0" style="color:red">User password is invalid</span>
 					</div>
+					<span *ngIf="validationErrors['password']"  style="color:red; margin-top:80px;">{{validationErrors.password}}</span>
 					<i></i>
 				</div>
         <div class="inputBox form-group">
@@ -30,6 +32,7 @@
 						<span *ngIf="changePasswordForm.get('confirmPassword')?.getError('Match')" class="m-0" style="color:red">Confirm password doesn't match </span>
 						<span *ngIf="changePasswordForm.get('confirmPassword')?.getError('invalid')" class="m-0" style="color:red">User password is invalid</span>
 					</div>
+					<span *ngIf="validationErrors['confirmPassword']"  style="color:red; margin-top:80px;">{{validationErrors.confirmPassword}}</span>
 					<i></i>
 				</div>
 				<div class="form-group">
