--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -4,14 +4,14 @@
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleForgetPassword(forgetPasswordForm)" [formGroup]="forgetPasswordForm" >
 				<h2>Forget Password</h2>
-				<span *ngIf="apiError" style="color:red">{{apiError}}</span>
+				<!-- <span *ngIf="apiError" style="color:red">{{apiError}}</span> -->
         <div class="inputBox form-group">
 					<span for="email">Email</span>
 					<input id="email" formControlName="email" type="text" required />
 					<div *ngIf="forgetPasswordForm.get('email')?.errors && forgetPasswordForm.get('email')?.touched ">
 						<span *ngIf="forgetPasswordForm.get('email')?.getError('required')" class="m-0" style="color:red">User email is mandatory</span>
-						<span *ngIf="forgetPasswordForm.get('email')?.getError('email')" class="m-0" style="color:red">Enter valid email</span>
 					</div>
+					<span *ngIf="validationErrors"  style="color:red; margin-top:80px;">{{validationErrors}}</span>
 					<i></i>
 				</div>
 				<div class="form-group">
