handle invitaions of user to join groups with bootstrap

--- a/src/app/Components/register/register.component.css
+++ b/src/app/Components/register/register.component.css
@@ -1,19 +1,23 @@
 body {
 	background: #23242a;
 	min-height: 100vh;
-  }
-  
-  .box {
+}
+
+.box {
 	position: relative;
 	width: 485px;
-	height: 790px;
+	/* height: 877px; */
+	/* height: 744px; */
+	height: 690px;
+	
 	background: #1c1c1c;
 	border-radius: 50px 5px;
 	overflow: hidden;
+	/* left: 450px; */
 	top: 85px;
-  }
-  
-  .box::before, .box::after {
+}
+
+.box::before {
 	content: '';
 	position: absolute;
 	top: -50px;
@@ -23,28 +27,23 @@ body {
 	background: linear-gradient(60deg, transparent, #45f3ff, #45f3ff);
 	transform-origin: bottom right;
 	animation: animate 6s linear infinite;
-  }
-  
-  .box::after {
-	animation-delay: -3s;
-<<<<<<< HEAD
-=======
-	background: linear-gradient(60deg, transparent, #d9138a, #d9138a);
->>>>>>> 9e2ab32 (handle of register to make the api error above the textbox)
-  }
-  
-  @keyframes animate {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
-  }
-  
-<<<<<<< HEAD
 
+}
+
+.box::after {
+	content: '';
+	position: absolute;
+	top: -50px;
+	left: -50px;
+	width: 370px;
+	height: 450px;
+	background: linear-gradient(60deg, transparent, #d9138a, #d9138a);
+	transform-origin: bottom right;
+	animation: animate 6s linear infinite;
+	animation-delay: -3s;
+}
 
 form {
-=======
-  form {
->>>>>>> 9e2ab32 (handle of register to make the api error above the textbox)
 	position: absolute;
 	inset: 2px;
 	z-index: 10;
@@ -53,21 +52,27 @@ form {
 	border-radius: 50px 5px;
 	background: #28292d;
 	flex-direction: column;
-  }
-  
-  h2 {
+}
+
+.name {
+	display: flex;
+	justify-content: space-around;
+}
+
+h2 {
 	color: #45f3ff;
 	font-size: 35px;
 	font-weight: 500;
 	text-align: center;
-  }
-  
-  .inputBox {
+}
+
+.inputBox {
 	position: relative;
+	/* width: 300px; */
 	margin-top: 35px;
-  }
-  
-  .inputBox input {
+}
+
+.inputBox input {
 	position: relative;
 	width: 100%;
 	padding: 20px 10px 10px;
@@ -78,27 +83,8 @@ form {
 	letter-spacing: 0.05em;
 	z-index: 10;
 	background: transparent !important;
-  }
-  
-  button[type="submit"] {
-<<<<<<< HEAD
-	font-size: 20px;
-	border: none;
-	outline: none;
-	background: #45f3ff;
-	padding: 5px;
-	margin-top: 73px;
-	border-radius: 90px;
-	font-weight: 900;
-	cursor: pointer;
-	width: 100%;
-  }
-  
-  button[type="submit"]:active {
-	background: linear-gradient(90deg, #45f3ff, #d9138a);
-	opacity: 0.8;
-  }
 
+}
 
 .inputBox span {
 	position: absolute;
@@ -109,56 +95,51 @@ form {
 	pointer-events: none;
 	letter-spacing: 0.05em;
 	transition: 0.5s;
-  }
-  
-  .inputBox input:valid~span,
-  .inputBox input:focus~span {
+
+}
+
+.inputBox span.img {
+	position: relative;
+	left: 0;
+	padding: 20px 10px 10px;
+	font-size: 1em;
+	color: #8f8f8f;
+	pointer-events: none;
+	letter-spacing: 0.05em;
+	transition: 0.5s;
+
+}
+
+.inputBox input:valid~span,
+.inputBox input:focus~span {
 	color: #45f3ff;
 	transform: translateX(-10px) translateY(-30px);
 	font-size: 0.75em;
-  }
-  
-  .inputBox i {
+}
+
+.inputBox i {
+
 	position: absolute;
 	left: 0;
 	bottom: 0;
 	width: 100%;
+	/* width: 423px; */
 	height: 2px;
 	background: #45f3ff;
 	transition: 0.5s;
 	pointer-events: none;
 	border-radius: 4px;
 	z-index: 9;
-  }
-  
-  .inputBox input:valid~i,
-  .inputBox input:focus~i {
-	height: 44px;
-  }
-  
-  .error-message {
-	margin-bottom: 20px;
-	color: red;
-  }
-  
-  .inputBox span {
-	display: block;
-	margin: 5px;
-  }
-  
-  .inputBox input {
-	margin-bottom: 10px;
-  }
-  
-  .inputBox .form-group {
-	margin-bottom: 20px;
-  }
-  
 
+}
+
+.inputBox input:valid~i,
+.inputBox input:focus~i {
+
+	height: 44px;
+}
 
 button[type="submit"] {
-=======
->>>>>>> 9e2ab32 (handle of register to make the api error above the textbox)
 	font-size: 20px;
 	border: none;
 	outline: none;
@@ -169,12 +150,11 @@ button[type="submit"] {
 	font-weight: 900;
 	cursor: pointer;
 	width: 100%;
-  }
-  
-  button[type="submit"]:active {
+}
+
+button[type="submit"]:active {
 	background: linear-gradient(90deg, #45f3ff, #d9138a);
 	opacity: 0.8;
-<<<<<<< HEAD
 
 }
 
@@ -188,64 +168,3 @@ button[type="submit"] {
 		transform: rotate(360deg);
 	}
 }
-
-
-
-=======
-  }
-  
-  .inputBox span {
-	position: absolute;
-	left: 0;
-	padding: 20px 10px 10px;
-	font-size: 1em;
-	color: #8f8f8f;
-	pointer-events: none;
-	letter-spacing: 0.05em;
-	transition: 0.5s;
-  }
-  
-  .inputBox input:valid~span,
-  .inputBox input:focus~span {
-	color: #45f3ff;
-	transform: translateX(-10px) translateY(-30px);
-	font-size: 0.75em;
-  }
-  
-  .inputBox i {
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 2px;
-	background: #45f3ff;
-	transition: 0.5s;
-	pointer-events: none;
-	border-radius: 4px;
-	z-index: 9;
-  }
-  
-  .inputBox input:valid~i,
-  .inputBox input:focus~i {
-	height: 44px;
-  }
-  
-  .error-message {
-	margin-bottom: 20px;
-	color: red;
-  }
-  
-  .inputBox span {
-	display: block;
-	margin: 5px;
-  }
-  
-  .inputBox input {
-	margin-bottom: 10px;
-  }
-  
-  .inputBox .form-group {
-	margin-bottom: 20px;
-  }
-  
->>>>>>> 9e2ab32 (handle of register to make the api error above the textbox)
