--- a/src/app/Components/profile/profile.component.css
+++ b/src/app/Components/profile/profile.component.css
@@ -1,5 +1,3 @@
-
-
 .profile-image img {
         width: 120px;
         height: 120px;
@@ -7,6 +5,7 @@
         object-fit: cover;
         border: 5px solid #ffffff;
         transition: transform 0.3s ease;
+        margin-bottom: 85px;
 }
 
 .profile-image img:hover {
@@ -15,6 +14,7 @@
 
 .profile-details {
         flex-grow: 1;
+        
 }
 
 .stat-item {
